create google test demo and run it successful.

--- a/test/document/20140701.md
+++ b/test/document/20140701.md
@@ -8,19 +8,47 @@
 master和develop分支工作。比如目前的目标是：使用google test，我们创建一个UsingGoogleTest分支，当我们能正常的运行一个google测试  
 之后，我们将本分支合并到develop分支，然后删除掉UsingGoogleTest分支。
 ##3.加入google test的头文件、库 
-    下载google mock，其内置google test，我们将编译好的lib文件放到d:\stock\lib目录下，头文件分别放在gtest和gmock两个目录。    
+   下载google mock，其内置google test，我们将编译好的lib文件放到d:\stock\lib目录下，头文件分别放在gtest和gmock两个目录。    
 注意lib目录并未加入到解决方案，仅仅由git管理，方便及时恢复开发环境。  
-    为了在test中能够找到相应的头文件，我们打开test的项目属性页(注意，空项目未含c/c++选项),先在左上角选择"所有配置"，然后在vc++目录  
+    
+  为了在test中能够找到相应的头文件，我们打开test的项目属性页(注意，空项目未含c/c++选项),先在左上角选择"所有配置"，然后在vc++目录  
 中的头文件目录中，增加一项$(SolutionDir)lib  
-    为了能够访问库文件，我们同样在"所有配置"中，链接器|常规|附加库目录，增加一项$(SolutionDir)lib，表示我们去哪里找附加库。然后在  
+
+  为了能够访问库文件，我们同样在"所有配置"中，链接器|常规|附加库目录，增加一项$(SolutionDir)lib，表示我们去哪里找附加库。然后在  
 链接器|输入|附加库中，加入gtest.lib和gmock.lib两项。我们对debug、release两种模式下，暂时都使用release库。
 
 ##4.创建一个简单的测试   
+我们先增加gtest_main.cc文件，用来运行全部测试：  
 
-##5.使用gmock
+    #include <stdio.h>
+    #include "gtest/gtest.h"
+    GTEST_API_ int main(int argc, char **argv) {
+    	printf("Running main() from gtest_main.cc\n");
+	    testing::InitGoogleTest(&argc, argv);
+	    return RUN_ALL_TESTS();
+    }
+
+然后增加gtest_demo.cc文件，分别为gtest和gmock创建一个简单的测试：
+编译不能通过，我们编译gtest的release版本的时候，项目属性|C/C++/代码生成/运行库，使用的是"多线程/MT"，我们将test项目统一  
+也改成相同的设置。在命令行窗口，分别运行debug、release模式下的test.exe，可以看到两个测试通过。
+
+##5.使用测试资源管理器运行gtest测试
+  在下面的链接中，下载vs2013的google测试运行器  
+
+[google test runner](http://visualstudiogallery.msdn.microsoft.com/9dd47c21-97a6-4369-b326-c562678066f0)  
+
+注意，安装之后，退出vs2013并打开test项目，在测试|窗口|测试资源管理器，打开测试资源管理器，vs会自动的  
+编译并列出所有google测试。
 
 ##6.发布到github
  
+我们已经成功的使用gtest运行两个单元测试，现在这个分支的任务已经完成，我们先提交，然后合并到develop分支  
+表示完成了第一项工作：using google test.
+在github上创建新的repository，命名为stock，得到代码库地址：
+https://github.com/by90/stock.git
+
+然后在团队资源管理器|分支，看到三个分支均为"未发布"。
+我们分别发布master、develop，为了示范我们将UsingGoogleTest分支也发布。
 
 
 
